Added Controllers to the project

--- a/Pyramids.API/appsettings.json
+++ b/Pyramids.API/appsettings.json
@@ -2,6 +2,8 @@
   "ConnectionStrings": { "DbConnection": "Server=localhost;Database=Pyramids;Trusted_Connection=True;Encrypt=False" },
 
   "AppSettings": {
+    "Token": "test"
+
 
   },
   "Logging": {
@@ -10,5 +12,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OpenAIConfig": {
+    "Key": "test"
+  }
+
 }
