map  connection string to new db

--- a/Pyramids.API/appsettings.json
+++ b/Pyramids.API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"DbConnection": "Server=localhost;Database=Pyramids;Trusted_Connection=True;Encrypt=False",
-    "DbConnection": "Server=db4029.public.databaseasp.net; Database=db4029; User Id=db4029; Password=F@n9-t4AQ=d3; Encrypt=False; MultipleActiveResultSets=True;"
+    //"DbConnection": "Server=db4029.public.databaseasp.net; Database=db4029; User Id=db4029; Password=F@n9-t4AQ=d3; Encrypt=False; MultipleActiveResultSets=True;"
+    "DbConnection": "Server=SQL5113.site4now.net;Database=db_aa7596_pyramids;User Id=db_aa7596_pyramids_admin;Password=iamthegame10"
   },
 
   "AppSettings": {
